# plasmahimawari

./: CMakeLists.txt  README.md  metadata.desktop  plasmahimawari.qmlproject
contents/code/: Himawari.js
contents/config/: main.xml
contents/ui/: config.qml  main.qml
